# compile_experiment

./: CMakeLists.txt  main.cpp  parse.cpp  parse.h  scanner.cpp  scanner.h  semantics.c  semantics.cpp  semantics.h  姑且实现了编译通过.patch
